Fixed z-index on submit bar

--- a/app/assets/stylesheets/railsyard/backend/common/form.css.sass
+++ b/app/assets/stylesheets/railsyard/backend/common/form.css.sass
@@ -82,6 +82,7 @@ form.horizontal
     +box-shadow(rgba(black, 0.2) 0 -3px 3px)
     margin: 0
     padding-left: 150px + 20px
+    z-index: 2
 
     input
       padding: 7px 12px
